Trying to fix squashed buttons bug

--- a/app/assets/stylesheets/expenses/_dashboard.scss
+++ b/app/assets/stylesheets/expenses/_dashboard.scss
@@ -114,12 +114,12 @@
       padding: 15px 18px;
 
       &:first-of-type {
-        margin-left: 15px;
+        margin-left: 10px;
       }
 
       &:last-of-type {
         float: right;
-        margin-right: 15px;
+        margin-right: 10px;
       }
     }
   }
